--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <div class="jumbotron text-center">
     
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <h1 class="display-3 text-white text-thin">Welcome to Cassiopeia 2.0!</h1>
-        <p class="lead text-white">A multi-purpose frontend template for Joomla 4.</p>
+        <h1 class="display-3 text-thin">Welcome to Cassiopeia 2.0!</h1>
+        <p class="lead">A multi-purpose frontend template for Joomla 4.</p>
         <p class="lead"><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
     </div>
       
