--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <body>
 <header>
+  <div class="container">
   <div class="row p-3">
     <div class="col"><a class="navbar-brand" href="index.html">Cassiopeia</a></div>
     <div class="col form-group has-search">
@@ -29,26 +30,29 @@
       <input type="text" class="form-control" placeholder="Search">
       </div>
   </div>
+  </div>
 </header>    
 <nav class="topbar-nav">
+  <div class="container">
     <ul class="metismenu" id="menu1">
-        <li><a class="has-arrow" href="about-single_article.html" aria-expanded="false">About</a></li>
-        <li><a class="has-arrow" href="blog.html" aria-expanded="false">Blog</a></li>
-        <li><a class="has-arrow" href="#" aria-expanded="true">Getting Started</a>
-            <ul>
-                <li><a href="get-started-link-01.html">First Steps</a></li>
-                <li><a href="#">More Steps</a></li>
-            </ul>
+      <li><a class="has-arrow" href="about-single_article.html" aria-expanded="false">About</a></li>
+      <li><a class="has-arrow" href="blog.html" aria-expanded="false">Blog</a></li>
+      <li><a class="has-arrow" href="#" aria-expanded="true">Getting Started</a>
+        <ul>
+          <li><a href="get-started-link-01.html">First Steps</a></li>
+          <li><a href="#">More Steps</a></li>
+          </ul>
         </li>
-        <li><a class="has-arrow" href="contact.html" aria-expanded="false">Contact</a></li>
-    </ul>
+      <li><a class="has-arrow" href="contact.html" aria-expanded="false">Contact</a></li>
+      </ul>
+  </div>
 
 </nav>
 <!--/NAV--> 
     <!-- InstanceBeginEditable name="content" -->
 <div class="jumbotron text-center">
     
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <div class="cover-container d-flex w-50 h-100 p-3 mx-auto flex-column">
         <h1 class="display-3 text-thin">Welcome to Cassiopeia 2.0!</h1>
         <p class="lead">A multi-purpose frontend template for Joomla 4.</p>
         <p class="lead"><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
