--- a/about-single_article.html
+++ b/about-single_article.html
@@ -66,7 +66,7 @@
       <p>&nbsp;Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.&nbsp;</p>
       <p>&nbsp;Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
 <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-info btn-sm">Previous</button><button type="button" class="btn btn-info btn-sm">Next</button>
+        <button type="button" class="btn btn-warning btn-sm">Previous</button><button type="button" class="btn btn-warning btn-sm">Next</button>
 </div>      
     </div>
     <div class="col-md-3"><!-- #BeginLibraryItem "/Library/blog-archives.lbi" -->
@@ -131,7 +131,7 @@
                   <input type="checkbox" value="remember-me"> Remember me
                 </label>
               </div>
-              <button class="btn btn-sm btn-primary btn-block" type="submit">Sign in</button>
+              <button class="btn btn-sm btn-warning btn-block" type="submit">Sign in</button>
           </form>
         </div>
   </div>
