--- a/blog.html
+++ b/blog.html
@@ -108,8 +108,8 @@
       </div><!-- /.blog-post -->
 
       <nav class="blog-pagination">
-        <a class="btn btn-outline-primary" href="#">Older</a>
-        <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Newer</a>
+        <a class="btn btn-outline-warning" href="#">Older</a>
+        <a class="btn btn-outline-warning disabled" href="#" tabindex="-1" aria-disabled="true">Newer</a>
       </nav>
         
     </div>
@@ -175,7 +175,7 @@
                   <input type="checkbox" value="remember-me"> Remember me
                 </label>
               </div>
-              <button class="btn btn-sm btn-primary btn-block" type="submit">Sign in</button>
+              <button class="btn btn-sm btn-warning btn-block" type="submit">Sign in</button>
           </form>
         </div>
   </div>
