--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
     <textarea class="form-control" placeholder="Message"></textarea>
   </div>
 
-  <button type="submit" class="btn btn-primary">Send</button>      
+  <button type="submit" class="btn btn-warning">Send</button>      
         
 </form>    
     </div>
@@ -136,7 +136,7 @@
                   <input type="checkbox" value="remember-me"> Remember me
                 </label>
               </div>
-              <button class="btn btn-sm btn-primary btn-block" type="submit">Sign in</button>
+              <button class="btn btn-sm btn-warning btn-block" type="submit">Sign in</button>
           </form>
         </div>
   </div>
