--- a/get-started-link-01.html
+++ b/get-started-link-01.html
@@ -210,7 +210,7 @@
                   <input type="checkbox" value="remember-me"> Remember me
                 </label>
               </div>
-              <button class="btn btn-sm btn-primary btn-block" type="submit">Sign in</button>
+              <button class="btn btn-sm btn-warning btn-block" type="submit">Sign in</button>
           </form>
         </div>
   </div>
