--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="cover-container d-flex w-50 h-100 p-3 mx-auto flex-column">
         <h1 class="display-3 text-thin">Welcome to Cassiopeia 2.0!</h1>
         <p class="lead">A multi-purpose frontend template for Joomla 4.</p>
-        <p class="lead"><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+        <p class="lead"><a class="btn btn-warning btn-lg" href="#" role="button">Learn more »</a></p>
     </div>
       
 </div>
@@ -66,22 +66,22 @@
     <div class="container text-center">
       <div class="row mt-auto">
       <div class="col-lg-4">
-        <img src="images/marketing flexible system.png" width="140" height="140" alt=""/>
+        <div class="bg-marketing-summer mb-4"><img src="images/marketing flexible system.png" alt=""/></div>
 <h2>Flexible System</h2>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        <p><a class="btn btn-warning" href="#" role="button">View details »</a></p>
       </div>
       <div class="col-lg-4">
-        <img src="images/marketing multilingual content.png" width="140" height="140" alt=""/>
+        <div class="bg-marketing-summer mb-4"><img src="images/marketing multilingual content.png" width="140" height="140" alt=""/></div>
 <h2>Multilangual Content</h2>
         <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        <p><a class="btn btn-warning" href="#" role="button">View details »</a></p>
       </div>
       <div class="col-lg-4">
-        <img src="images/marketing security first.png" width="140" height="140" alt=""/>
+        <div class="bg-marketing-summer mb-4"><img src="images/marketing security first.png" width="140" height="140" alt=""/></div>
 <h2>Security First</h2>
         <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula. </p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        <p><a class="btn btn-warning" href="#" role="button">View details »</a></p>
       </div>
     </div>    
     </div>    
@@ -189,7 +189,7 @@
                   <input type="checkbox" value="remember-me"> Remember me
                 </label>
               </div>
-              <button class="btn btn-sm btn-primary btn-block" type="submit">Sign in</button>
+              <button class="btn btn-sm btn-warning btn-block" type="submit">Sign in</button>
           </form>
         </div>
   </div>
