--- a/winter-index.html
+++ b/winter-index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/mm-horizontal.css">
     <link href="css/mod.css" rel="stylesheet" type="text/css">
 <!-- InstanceBeginEditable name="head" -->
-    <link href="css/cassiopeia-summer.css" rel="stylesheet" type="text/css">
+    <link href="css/cassiopeia-winter.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 </head>
 
@@ -25,7 +25,7 @@
 <header>
   <div class="container">
   <div class="row p-3">
-    <div class="col"><!-- InstanceBeginEditable name="navbrand" --><a class="navbar-brand" href="index.html">Cassiopeia</a><!-- InstanceEndEditable --></div>
+    <div class="col"><!-- InstanceBeginEditable name="navbrand" --><a class="navbar-brand" href="winter-index.html">Cassiopeia</a><!-- InstanceEndEditable --></div>
     <div class="col form-group has-search">
       <span class="fa fa-search form-control-feedback"></span>
       <input type="text" class="form-control" placeholder="Search">
@@ -33,26 +33,26 @@
   </div>
   </div>
 </header>
-<!-- InstanceBeginEditable name="nav" --><!-- #BeginLibraryItem "/Library/menu-summer.lbi" --><nav class="topbar-nav">
+<!-- InstanceBeginEditable name="nav" --><!-- #BeginLibraryItem "/Library/menu-winter.lbi" --><nav class="topbar-nav">
   <div class="container">
     <ul class="metismenu" id="menu1">
-      <li><a class="has-arrow" href="summer-about-single_article.html" aria-expanded="false">About</a></li>
-      <li><a class="has-arrow" href="summer-blog.html" aria-expanded="false">Blog</a></li>
+      <li><a class="has-arrow" href="winter-about-single_article.html" aria-expanded="false">About</a></li>
+      <li><a class="has-arrow" href="winter-blog.html" aria-expanded="false">Blog</a></li>
       <li><a class="has-arrow" href="#" aria-expanded="true">Getting Started</a>
         <ul>
-          <li><a href="summer-get_started-first_steps.html">First Steps</a></li>
+          <li><a href="winter-get_started-first_steps.html">First Steps</a></li>
           <li><a href="#">More Steps</a></li>
-          </ul>
-        </li>
-      <li><a class="has-arrow" href="summer-contact.html" aria-expanded="false">Contact</a></li>
+        </ul>
+      </li>
+      <li><a class="has-arrow" href="winter-contact.html" aria-expanded="false">Contact</a></li>
       <li><a class="has-arrow" href="#" aria-expanded="true">Variations</a>
         <ul>
           <li><a href="autumn-index.html">Autumn</a></li>
           <li><a href="spring-index.html">Spring</a></li>
-          <li><a href="winter-index.html">Winter</a></li>    
+          <li><a href="index.html">Summer</a></li>
         </ul>
-      </li>     
-      </ul>
+      </li>    
+    </ul>
   </div>
 
 </nav><!-- #EndLibraryItem --><!-- InstanceEndEditable --><!--/NAV--> 
