--- a/autumn-about-single_article.html
+++ b/autumn-about-single_article.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Cassiopeia - First Steps</title>
+<title>Untitled Document</title>
 <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/metismenu/dist/metisMenu.min.css">
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/mm-horizontal.css">
     <link href="css/mod.css" rel="stylesheet" type="text/css">
 <!-- InstanceBeginEditable name="head" -->
+    <link href="css/cassiopeia-summer.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 </head>
 
@@ -24,132 +25,58 @@
 <header>
   <div class="container">
   <div class="row p-3">
-    <div class="col"><a class="navbar-brand" href="index.html">Cassiopeia</a></div>
+    <div class="col"><!-- InstanceBeginEditable name="navbrand" --><a class="navbar-brand" href="autumn-index.html">Cassiopeia</a><!-- InstanceEndEditable --></div>
     <div class="col form-group has-search">
       <span class="fa fa-search form-control-feedback"></span>
       <input type="text" class="form-control" placeholder="Search">
       </div>
   </div>
   </div>
-</header>    
-<nav class="topbar-nav">
+</header>
+<!-- InstanceBeginEditable name="nav" --><!-- #BeginLibraryItem "/Library/menu-autumn.lbi" --><nav class="topbar-nav">
   <div class="container">
     <ul class="metismenu" id="menu1">
-      <li><a class="has-arrow" href="about-single_article.html" aria-expanded="false">About</a></li>
-      <li><a class="has-arrow" href="blog.html" aria-expanded="false">Blog</a></li>
+      <li><a class="has-arrow" href="autumn-about-single_article.html" aria-expanded="false">About</a></li>
+      <li><a class="has-arrow" href="autumn-blog.html" aria-expanded="false">Blog</a></li>
       <li><a class="has-arrow" href="#" aria-expanded="true">Getting Started</a>
         <ul>
-          <li><a href="get-started-link-01.html">First Steps</a></li>
+          <li><a href="autumn-get_started-first_steps.html">First Steps</a></li>
           <li><a href="#">More Steps</a></li>
-          </ul>
-        </li>
-      <li><a class="has-arrow" href="contact.html" aria-expanded="false">Contact</a></li>
-      </ul>
+        </ul>
+      </li>
+      <li><a class="has-arrow" href="autumn-contact.html" aria-expanded="false">Contact</a></li>
+      <li><a class="has-arrow" href="#" aria-expanded="true">Variations</a>
+        <ul>
+          <li><a href="spring-index.html">Spring</a></li>
+          <li><a href="index.html">Summer</a></li>
+          <li><a href="winter-index.html">Winter</a></li>    
+        </ul>
+      </li>     
+    </ul>
   </div>
 
-</nav>
-<!--/NAV--> 
-    <!-- InstanceBeginEditable name="content" -->
+</nav><!-- #EndLibraryItem --><!-- InstanceEndEditable --><!--/NAV--> 
+<!-- InstanceBeginEditable name="content" -->
 <div class="container">
   <div class="row my-5">
     <div class="col-md-9">
-      <h2 class="pb-3">First Steps</h2>
-      <div class="table-responsive ">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th scope="col">Title</th>
-              <th scope="col">Author</th>
-              <th scope="col">Hits</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="#">General Settings</a></td>
-              <td><a href="#">Written by Christiane</a></td>
-              <td>Hits: 1206</td>
-            </tr>
-            <tr>
-              <td><a href="#">Managing Content</a></td>
-              <td><a href="#">Written by Helvecio</a></td>
-              <td>Hits: 2068</td>
-            </tr>
-            <tr>
-              <td><a href="#">Managing Menus </a></td>
-              <td><a href="#">Written by Viviane</a></td>
-              <td>Hits: 643</td>
-            </tr>
-            <tr>
-              <td><a href="#">Special Features</a></td>
-              <td><a href="#">Written by Marco</a></td>
-              <td>Hits: 921</td>
-            </tr>
-            <tr>
-              <td><a href="#">General Settings</a></td>
-              <td><a href="#">Written by Christiane</a></td>
-              <td>Hits: 1206</td>
-            </tr>
-            <tr>
-              <td><a href="#">Managing Content</a></td>
-              <td><a href="#">Written by Helvecio</a></td>
-              <td>Hits: 2068</td>
-            </tr>
-            <tr>
-              <td><a href="#">Managing Menus </a></td>
-              <td><a href="#">Written by Viviane</a></td>
-              <td>Hits: 643</td>
-            </tr>
-            <tr>
-              <td><a href="#">Special Features</a></td>
-              <td><a href="#">Written by Marco</a></td>
-              <td>Hits: 921</td>
-            </tr>
-            <tr>
-              <td><a href="#">General Settings</a></td>
-              <td><a href="#">Written by Christiane</a></td>
-              <td>Hits: 1206</td>
-            </tr>
-            <tr>
-              <td><a href="#">Managing Content</a></td>
-              <td><a href="#">Written by Helvecio</a></td>
-              <td>Hits: 2068</td>
-            </tr>
-            <tr>
-              <td><a href="#">Managing Menus </a></td>
-              <td><a href="#">Written by Viviane</a></td>
-              <td>Hits: 643</td>
-            </tr>
-            <tr>
-              <td><a href="#">Special Features</a></td>
-              <td><a href="#">Written by Marco</a></td>
-              <td>Hits: 921</td>
-            </tr>
-            <tr>
-              <td><a href="#">General Settings</a></td>
-              <td><a href="#">Written by Christiane</a></td>
-              <td>Hits: 1206</td>
-            </tr>
-            <tr>
-              <td><a href="#">Managing Content</a></td>
-              <td><a href="#">Written by Helvecio</a></td>
-              <td>Hits: 2068</td>
-            </tr>
-            <tr>
-              <td><a href="#">Managing Menus </a></td>
-              <td><a href="#">Written by Viviane</a></td>
-              <td>Hits: 643</td>
-            </tr>
-            <tr>
-              <td><a href="#">Special Features</a></td>
-              <td><a href="#">Written by Marco</a></td>
-              <td>Hits: 921</td>
-            </tr>
-          </tbody>
-  </table>
-      </div>
+      <h2 class="pb-4">About</h2>
+      <p class="small"><strong>Details</strong>&nbsp;<br>
+        Written by Joomla User <br>
+      Category: Uncategorised <br>
+      Published: 10 August 2020 <br>
+      Hits: 1</p>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?&nbsp;</p>
+      <p>&nbsp;Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+      <p>&nbsp;Et harum quidem rerum facilis est et expedita distinctio. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.&nbsp;</p>
+      <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?&nbsp;</p>
+      <p>&nbsp;Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.&nbsp;</p>
+      <p>&nbsp;Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+<div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-warning btn-sm">Previous</button><button type="button" class="btn btn-warning btn-sm">Next</button>
+</div>      
     </div>
-    <div class="col-md-3"><!-- #BeginLibraryItem "/Library/blog-archives.lbi" -->
-      <div class="p-4 mb-3 bg-light rounded">
+    <div class="col-md-3"><!-- #BeginLibraryItem "/Library/blog-archives.lbi" --><div class="p-4 mb-3 bg-light rounded">
         <h4>Blog Archives</h4>
         <ol class="list-unstyled mb-0">
           <li><a href="#">March 2014</a></li>
@@ -165,8 +92,7 @@
           <li><a href="#">May 2013</a></li>
           <li><a href="#">April 2013</a></li>
         </ol>
-      </div>
-    <!-- #EndLibraryItem --></div>  
+      </div><!-- #EndLibraryItem --></div>  
   </div>
 </div>
 <!-- InstanceEndEditable -->  
