--- a/autumn-contact.html
+++ b/autumn-contact.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/mm-horizontal.css">
     <link href="css/mod.css" rel="stylesheet" type="text/css">
 <!-- InstanceBeginEditable name="head" -->
-    <link href="css/cassiopeia-summer.css" rel="stylesheet" type="text/css">
+    <link href="css/cassiopeia-autumn.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 </head>
 
