--- a/winter-index.html
+++ b/winter-index.html
@@ -59,7 +59,7 @@
 <!-- InstanceBeginEditable name="content" -->
 <div class="jumbotron text-center">
     
-    <div class="cover-container d-flex w-50 h-100 p-3 mx-auto flex-column">
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
         <h1 class="display-3 text-thin">Welcome to Cassiopeia 2.0!</h1>
         <p class="lead">A multi-purpose frontend template for Joomla 4.</p>
         <p class="lead"><a class="btn btn-warning btn-lg" href="#" role="button">Learn more »</a></p>
