--- a/spring-index.html
+++ b/spring-index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/noty/lib/noty.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/noty/lib/themes/relax.css">
     <link rel="stylesheet" href="css/mm-horizontal.css">
-    <link href="css/mod.css" rel="stylesheet" type="text/css">
+    <link href="css/cassiopeia.css" rel="stylesheet" type="text/css">
 <!-- InstanceBeginEditable name="head" -->
     <link href="css/cassiopeia-spring.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
