--- a/spring-blog.html
+++ b/spring-blog.html
@@ -51,7 +51,8 @@
           <li><a href="index.html">Summer</a></li>
           <li><a href="winter-index.html">Winter</a></li>    
         </ul>
-      </li>     
+      </li>  
+      <li><a class="has-arrow" href="spring-style-guide.html" aria-expanded="false">Style Guide</a></li>     
     </ul>
   </div>
 
