--- a/summer-contact.html
+++ b/summer-contact.html
@@ -51,7 +51,8 @@
           <li><a href="spring-index.html">Spring</a></li>
           <li><a href="winter-index.html">Winter</a></li>    
         </ul>
-      </li>     
+      </li>
+      <li><a class="has-arrow" href="summer-style-guide.html" aria-expanded="false">Style Guide</a></li>     
       </ul>
   </div>
 
