--- a/winter-blog.html
+++ b/winter-blog.html
@@ -51,7 +51,8 @@
           <li><a href="spring-index.html">Spring</a></li>
           <li><a href="index.html">Summer</a></li>
         </ul>
-      </li>    
+      </li>
+      <li><a class="has-arrow" href="winter-style-guide.html" aria-expanded="false">Style Guide</a></li>     
     </ul>
   </div>
 
